header and main div

--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
 
 <body>
     <header>
-
+        Website for my D&amp;D setting.
     </header>
+
+    <div class="main">
+
+    </div>
 
     <footer>
         Copyright 2022 Gavin C. White
