more work on header

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
 <body>
     <header>
-        Website for my D&amp;D setting.
+        <div style="float:left">Website for my D&amp;D setting.</div>
+        <div style="float:right"></div>
     </header>
 
     <div class="main">
