don't remove css load links

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             link.href = 'https://thesettingmyr.github.io/css/main.css';
             head.appendChild(link);
 
-            document.removeChild(document.getElementById('linkLoadCss'));
+            //document.removeChild(document.getElementById('linkLoadCss'));
         }
     </script>
 </head>
