switch dark and light conditional

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
         <div style="float:left">Website for my D&amp;D setting.</div>
         <div style="float:right">
             <div id='linkLoadCss'>
-                <a href='javascript:loadCss(true)'>Load Dark</a>
-                <a href='javascript:loadCss(false)'>Load Light</a>
+                <a href='javascript:loadCss(false)'>Load Dark</a>
+                <a href='javascript:loadCss(true)'>Load Light</a>
             </div>
         </div>
     </header>
